# variable_width_manipulator

./: CMakeLists.txt  package.xml
scripts/: example_sequence.py  hand_controller.py  hands.py  lib_robotis_mod.py  registerDict.py
srv/: ReadMotor.srv  WriteMotor.srv
